--- a/devel/pango/Makefile
+++ b/devel/pango/Makefile
@@ -1,6 +1,6 @@
-# $NetBSD: Makefile,v 1.131 2009/06/03 12:40:32 obache Exp $
+# $NetBSD: Makefile,v 1.132 2009/07/09 17:29:58 drochner Exp $
 
-DISTNAME=		pango-1.24.2
+DISTNAME=		pango-1.24.4
 CATEGORIES=		devel fonts
 MASTER_SITES=		${MASTER_SITE_GNOME:=sources/pango/1.24/}
 EXTRACT_SUFX=		.tar.bz2
