--- a/sysutils/dbus/Makefile
+++ b/sysutils/dbus/Makefile
@@ -1,7 +1,6 @@
-# $NetBSD: Makefile,v 1.73 2014/09/13 09:47:11 richard Exp $
+# $NetBSD: Makefile,v 1.74 2014/09/16 21:30:18 wiz Exp $
 
-DISTNAME=	dbus-1.8.6
-PKGREVISION=	1
+DISTNAME=	dbus-1.8.8
 CATEGORIES=	sysutils
 MASTER_SITES=	http://dbus.freedesktop.org/releases/dbus/
 
