geography/gdal-lib: Update to 2.3.3
2.3.3: bug fixes and minor improvements
2.3.2: bug fixes and minor improvements
2.3.1: bug fixes and minor improvements

= GDAL/OGR 2.3.0 Release Notes =

Note: due to the change of SCM during the development, #XXXX still refers to
Trac tickets. GitHub tickets are explicitly indicated with github #XXXX

== In a nutshell... ==

 * New GDAL drivers:
   - PDS4: read/write
   - RDA: DigitalGlobe Raster Data Access (read-only)
 * New OGR drivers:
   - MVT: add read/write driver for Mapbox Vector Tile standalone files or tilesets
   - ESRIJson and TopoJSON: read-only, splitted from existing code of the GeoJSON driver
   - WFS3: *experimental* read-only driver
 * RFC 68: Make C++11 a build requirement
    https://trac.osgeo.org/gdal/wiki/rfc68_cplusplus11
 * RFC 70: Guess output format from extension of output filename, if no explicit format passed to C++ or Python utilities
    https://trac.osgeo.org/gdal/wiki/rfc70_output_format_guess
 * RFC 71: Move to GitHub for source code repository and issue tracker.
    https://trac.osgeo.org/gdal/wiki/rfc71_github_migration
 * Significantly improved drivers:
    - MBTiles (vector tiles support)
    - DXF
    - GRIB (GRIB2 write support)
    - WCS (support WCS 2.0)
 * Improvements in network-based /vsi handlers: /vsicurl, /vsis3, /vsigs. Add:
     - /vsiaz for Microsoft Azure Blobs
     - /vsioss for Alibaba Cloud Object Storage Service
     - /vsiswift/ for OpenStack Swift object storage
 * Command line utilities: use Unicode main on Windows to avoid issues with non-ASCII characters (#7065)
 * Update to EPSG v9.2 (#7125)
 * Update data/esri_extra.wkt and add data/esri_epsg.wkt, taken from https://github.com/Esri/projection-engine-db-doc (Apache v2 license) (#2163)
 * Add support for PROJ.5 new API (requires proj 5.0.1 or later). PROJ 4.X is still supported.
 * More than 1000 fixes for issues/vulnerabilities found by OSS-Fuzz
 * Remove raster OGDI driver (vector OGDI driver still there) (#7087)



--- a/geography/gdal-lib/Makefile
+++ b/geography/gdal-lib/Makefile
@@ -1,6 +1,6 @@
-# $NetBSD: Makefile,v 1.109 2019/03/08 20:23:23 gdt Exp $
+# $NetBSD: Makefile,v 1.110 2019/03/09 01:54:59 gdt Exp $
 
-PKGREVISION=	9
+#PKGREVISION=	0
 .include "../../geography/gdal-lib/Makefile.common"
 PKGNAME=	${DISTNAME:S/gdal/gdal-lib/}
 
@@ -10,6 +10,8 @@ HOMEPAGE=	http://www.gdal.org/
 COMMENT=	Translator library for raster geospatial data formats
 LICENSE=	mit
 
+USE_LANGUAGES+=	c99 c++11
+
 # This package intends to link against only libgeos_c, but ends up
 # also linking to the C++ library libgeos, apparently because of a
 # libtool problem.
@@ -17,7 +19,7 @@ LICENSE=	mit
 
 CONFIGURE_ARGS+=	--without-python
 
-CONFIGURE_ARGS+=	--with-static-proj4
+CONFIGURE_ARGS+=	--with-proj
 
 MAKE_FILE=		GNUmakefile
 
