--- a/geography/gdal-lib/Makefile.common
+++ b/geography/gdal-lib/Makefile.common
@@ -1,9 +1,10 @@
-# $NetBSD: Makefile.common,v 1.2 2018/03/21 23:20:12 gdt Exp $
+# $NetBSD: Makefile.common,v 1.3 2019/03/09 01:54:59 gdt Exp $
 #
 # used by geography/gdal-lib/Makefile
 # used by geography/py-gdal/Makefile
 
-DISTNAME=	gdal-2.2.4
+VERSION=	2.3.3
+DISTNAME=	gdal-${VERSION}
 CATEGORIES=	geography
 MASTER_SITES=	http://download.osgeo.org/gdal/${PKGVERSION_NOREV}/
 
