--- a/lang/php73/Makefile
+++ b/lang/php73/Makefile
@@ -1,10 +1,9 @@
-# $NetBSD: Makefile,v 1.2 2019/03/11 13:46:12 jperkin Exp $
+# $NetBSD: Makefile,v 1.3 2019/03/12 04:15:03 taca Exp $
 
 #
 # We can't omit PKGNAME here to handle PKG_OPTIONS.
 #
 PKGNAME=		php-${PHP_VERSION:S/RC/rc/}
-PKGREVISION=		1
 
 HOMEPAGE=		http://www.php.net/
 COMMENT=		PHP Hypertext Preprocessor version 7.3
