--- a/lang/ruby25-base/Makefile
+++ b/lang/ruby25-base/Makefile
@@ -1,10 +1,14 @@
-# $NetBSD: Makefile,v 1.7 2019/02/14 06:03:50 taca Exp $
+# $NetBSD: Makefile,v 1.8 2019/03/12 04:22:34 taca Exp $
 
 DISTNAME=	${RUBY_DISTNAME}
 PKGNAME=	${RUBY_PKGPREFIX}-base-${RUBY_VERSION}
-PKGREVISION=	1
+PKGREVISION=	2
 CATEGORIES=	lang ruby
 MASTER_SITES=	${MASTER_SITE_RUBY}
+
+# announced patch is failed to apply, so use local version.
+PATCHFILES=	ruby-2.5.3-rubygems.patch-20190311
+PATCH_SITES=	${MASTER_SITE_LOCAL}
 
 MAINTAINER=	taca@NetBSD.org
 HOMEPAGE=	${RUBY_HOMEPAGE}
