--- a/lang/ruby24-base/Makefile
+++ b/lang/ruby24-base/Makefile
@@ -1,9 +1,13 @@
-# $NetBSD: Makefile,v 1.9 2018/07/17 10:56:24 jperkin Exp $
+# $NetBSD: Makefile,v 1.10 2019/03/12 04:23:45 taca Exp $
 
 DISTNAME=	${RUBY_DISTNAME}
 PKGNAME=	${RUBY_PKGPREFIX}-base-${RUBY_VERSION}
 CATEGORIES=	lang ruby
 MASTER_SITES=	${MASTER_SITE_RUBY}
+
+# announced patch is failed to apply, so use local version.
+PATCHFILES=	ruby-2.4.5-rubygems.patch-20190311
+PATCH_SITES=	${MASTER_SITE_LOCAL}
 
 MAINTAINER=	taca@NetBSD.org
 HOMEPAGE=	${RUBY_HOMEPAGE}
