--- a/sysutils/beats/Makefile
+++ b/sysutils/beats/Makefile
@@ -1,7 +1,7 @@
-# $NetBSD: Makefile,v 1.37 2019/03/09 10:05:11 bsiegert Exp $
+# $NetBSD: Makefile,v 1.38 2019/03/15 15:03:02 he Exp $
 
-DISTNAME=		beats-6.2.4
-PKGREVISION=		5
+DISTNAME=		beats-6.6.2
+#PKGREVISION=		5
 CATEGORIES=		sysutils
 MASTER_SITES=		${MASTER_SITE_GITHUB:=elastic/}
 GITHUB_PROJECT=		beats
