--- a/www/wordpress/Makefile
+++ b/www/wordpress/Makefile
@@ -1,7 +1,7 @@
-# $NetBSD: Makefile,v 1.84 2019/03/02 14:30:14 wen Exp $
+# $NetBSD: Makefile,v 1.85 2019/03/16 17:55:04 jklos Exp $
 
 DISTNAME=		wordpress-${VERSION}
-VERSION=		5.1
+VERSION=		5.1.1
 CATEGORIES=		www
 MASTER_SITES=		https://wordpress.org/
 
