--- a/print/cups-base/Makefile
+++ b/print/cups-base/Makefile
@@ -1,10 +1,9 @@
-# $NetBSD: Makefile,v 1.23 2019/08/11 13:22:38 wiz Exp $
+# $NetBSD: Makefile,v 1.24 2019/08/16 21:19:30 leot Exp $
 
 .include "../../print/cups/Makefile.common"
 
 DISTNAME=	cups-${CUPS_VERS}-source
 PKGNAME=	cups-base-${CUPS_VERS}
-PKGREVISION=	4
 CATEGORIES=	print
 MASTER_SITES=	${MASTER_SITE_GITHUB:=apple/}
 
