--- a/textproc/p5-YAML/Makefile
+++ b/textproc/p5-YAML/Makefile
@@ -1,9 +1,8 @@
-# $NetBSD: Makefile,v 1.56 2019/08/11 13:23:58 wiz Exp $
+# $NetBSD: Makefile,v 1.57 2019/08/23 11:26:43 adam Exp $
 
-DISTNAME=	YAML-1.27
+DISTNAME=	YAML-1.29
 PKGNAME=	p5-${DISTNAME}
-PKGREVISION=	1
-CATEGORIES=	perl5 textproc
+CATEGORIES=	textproc perl5
 MASTER_SITES=	${MASTER_SITE_PERL_CPAN:=YAML/}
 
 MAINTAINER=	pkgsrc-users@NetBSD.org
