--- a/sysutils/libtpms/Makefile
+++ b/sysutils/libtpms/Makefile
@@ -1,9 +1,8 @@
-# $NetBSD: Makefile,v 1.3 2023/10/24 22:11:09 wiz Exp $
+# $NetBSD: Makefile,v 1.4 2024/12/09 13:46:47 ryoon Exp $
 
 GITHUB_PROJECT=	libtpms
 GITHUB_TAG=	v${PKGVERSION_NOREV}
-DISTNAME=	libtpms-0.9.6
-PKGREVISION=	1
+DISTNAME=	libtpms-0.10.0
 CATEGORIES=	sysutils
 MASTER_SITES=	${MASTER_SITE_GITHUB:=stefanberger/}
 
