--- a/security/osv-scanner/Makefile
+++ b/security/osv-scanner/Makefile
@@ -1,7 +1,6 @@
-# $NetBSD: Makefile,v 1.25 2024/09/06 18:48:56 bsiegert Exp $
+# $NetBSD: Makefile,v 1.26 2024/12/12 10:51:49 leot Exp $
 
-DISTNAME=	osv-scanner-1.7.4
-PKGREVISION=	5
+DISTNAME=	osv-scanner-1.9.1
 CATEGORIES=	security
 MASTER_SITES=	${MASTER_SITE_GITHUB:=google/}
 GITHUB_TAG=	v${PKGVERSION_NOREV}
@@ -11,8 +10,9 @@ HOMEPAGE=	https://github.com/google/osv-scanner/
 COMMENT=	Vulnerability scanner written using the OSV project
 LICENSE=	apache-2.0
 
-USE_LANGUAGES=	c # go
+GO_BUILD_PATTERN+=	./cmd/osv-scanner
 
 .include "go-modules.mk"
+
 .include "../../lang/go/go-module.mk"
 .include "../../mk/bsd.pkg.mk"
