lang/gauche: Update to 0.9.15
* Enable TLS support by MbedTLS.

Changelog:
0.9.15:
Security fix

Only Windows version is affected.

If you ran .bat or .cmd via sys-exec (or other higher-level APIs such as
run-process), certain crafted command-line argument could invoke external
commands: https://kb.cert.org/vuls/id/123335

In Gauche, the effect is limited because the user need to give .bat or .cmd
extensions explicitly to run those files, so the user code can check unsafe
arguments as well. Nevertheless, it is better not to have holes.

Now, if you're trying to run a .bat or .cmd file and the argument contains one
of "unsafe" characters, an error is thrown. (Issue:1017)

Other important fixes

build-standalone was broken

You couldn't build a standalone binary with 0.9.14, for it introduced an
unintended dependency on private header files (which is only available when you
have a source tree). It is addressed. Issue:1013.

TLS handshake error in newer MbedTLS

When you tried to use TLS server socket with newer MbedTLS, clients failed to
connect with TLS handshake error. It is fixed.

Besides, if you configure with --with-tls=mbedtls-internal, it now uses MbedTLS
3.5.2. Issue:1018,Issue:1021.

O(n) in size-of method

The size-of method returns a size of a collection. Since the minimal
requirement of collection protocol is an iterator, the default method of
size-of iterates over all elements to count them. It happened that built-in
hashtables and treemaps didn't specialize size-of, it caused O(n) instead of O
(1). Now those methods are specialized, and documentation warns this fallback
behavior. Issue:987.

Compatibility warnings

Legacy argument keywords for define-cproc

At the beginning, C interface (define-cproc) used CL-style lambda keywords such
as &optional. We switched to keywords :optional loooong time ago, but we've
supported the old style. We plan to drop it. If you see this warning, please
update the source.

'#<undef> is used in boolean context'

This warn

--- a/lang/gauche/patches/patch-ext_zlib_Makefile.in
+++ b/lang/gauche/patches/patch-ext_zlib_Makefile.in
@@ -1,15 +1,13 @@
-$NetBSD: patch-ext_zlib_Makefile.in,v 1.1 2018/07/26 16:55:29 jperkin Exp $
+$NetBSD: patch-ext_zlib_Makefile.in,v 1.2 2024/12/12 15:14:35 ryoon Exp $
 
-Ensure correct zlib library is linked.
-
---- ext/zlib/Makefile.in.orig	2017-04-14 08:07:25.000000000 +0000
+--- ext/zlib/Makefile.in.orig	2024-12-11 14:28:37.613803963 +0000
 +++ ext/zlib/Makefile.in
-@@ -21,7 +21,7 @@ XCLEANFILES = rfc--zlib.c zlib.sci
- all : $(LIBFILES)
+@@ -5,7 +5,7 @@ top_srcdir   = @top_srcdir@
+ include ../Makefile.ext
  
- rfc--zlib.$(SOEXT) : $(OBJECTS)
--	$(MODLINK) rfc--zlib.$(SOEXT) $(OBJECTS) $(EXT_LIBGAUCHE) $(LIBS)
-+	$(MODLINK) rfc--zlib.$(SOEXT) $(OBJECTS) $(EXT_LIBGAUCHE) $(XLDFLAGS) $(LIBS)
+ XCPPFLAGS = @ZLIB_CPPFLAGS@
+-XLDFLAGS  = @ZLIB_LDFLAGS@
++XLDFLAGS += @ZLIB_LDFLAGS@
+ XLIBS     = @ZLIB_LIB@
  
- $(OBJECTS) : gauche-zlib.h
- 
+ SCM_CATEGORY = rfc
