--- a/lang/gauche/Makefile
+++ b/lang/gauche/Makefile
@@ -1,9 +1,12 @@
-# $NetBSD: Makefile,v 1.76 2021/07/24 14:50:42 yhardy Exp $
+# $NetBSD: Makefile,v 1.77 2024/12/12 15:14:35 ryoon Exp $
 #
 
-DISTNAME=	Gauche-0.9.10
+DISTNAME=	Gauche-0.9.15
+PKGNAME=	${DISTNAME:tl}
 CATEGORIES=	lang
-MASTER_SITES=	${MASTER_SITE_SOURCEFORGE:=gauche/}
+MASTER_SITES=	${MASTER_SITE_GITHUB:=shirok/}
+GITHUB_PROJECT=	Gauche
+GITHUB_RELEASE=	release${PKGVERSION_NOREV:S/./_/g}
 EXTRACT_SUFX=	.tgz
 
 MAINTAINER=	enami@NetBSD.org
@@ -23,7 +26,10 @@ CONFIGURE_ARGS+=	--enable-threads=pthreads
 CONFIGURE_ARGS+=	--with-iconv=${BUILDLINK_PREFIX.iconv}
 CONFIGURE_ARGS+=	--with-zlib=${BUILDLINK_PREFIX.zlib}
 
-USE_LANGUAGES=	c c99
+MAKE_ENV+=	MBEDTLS_LDFLAGS="${COMPILER_RPATH_FLAG}${PREFIX}/lib -L${PREFIX}/lib"
+
+USE_LANGUAGES=	c
+USE_CC_FEATURES=	gnu11
 USE_LIBTOOL=	yes
 USE_TOOLS+=	gmake gzip makeinfo
 TEST_TARGET=	check
@@ -44,4 +50,5 @@ post-install:
 
 .include "../../converters/libiconv/buildlink3.mk"
 .include "../../devel/zlib/buildlink3.mk"
+.include "../../security/mbedtls/buildlink3.mk"
 .include "../../mk/bsd.pkg.mk"
