--- a/biology/microsynteny-tools/Makefile
+++ b/biology/microsynteny-tools/Makefile
@@ -1,4 +1,4 @@
-# $NetBSD: Makefile,v 1.3 2024/10/14 06:45:32 wiz Exp $
+# $NetBSD: Makefile,v 1.4 2024/12/17 14:56:54 bacon Exp $
 
 DISTNAME=	microsynteny-tools-0.1.0.175
 CATEGORIES=	biology
@@ -17,6 +17,8 @@ DEPENDS+=	auto-admin>0:../../sysutils/auto-admin
 DEPENDS+=	biolibc-tools>0:../../biology/biolibc-tools
 
 REPLACE_PYTHON=	Scripts/*.py
+
+MAKE_ENV+=      MANDIR=${PREFIX}/${PKGMANDIR}
 
 .include "../../biology/biolibc/buildlink3.mk"
 .include "../../lang/python/application.mk"
