--- a/net/ngtcp2/Makefile
+++ b/net/ngtcp2/Makefile
@@ -1,6 +1,6 @@
-# $NetBSD: Makefile,v 1.21 2024/10/17 18:54:31 adam Exp $
+# $NetBSD: Makefile,v 1.22 2024/12/24 15:34:07 adam Exp $
 
-DISTNAME=	ngtcp2-1.8.1
+DISTNAME=	ngtcp2-1.10.0
 CATEGORIES=	net
 MASTER_SITES=	${MASTER_SITE_GITHUB:=ngtcp2/}
 GITHUB_RELEASE=	v${PKGVERSION_NOREV}
@@ -12,6 +12,9 @@ COMMENT=	Implements RFC9000 QUIC protocol
 LICENSE=	mit
 
 USE_LANGUAGES=	c c++
+
+# Require QUIC support in OpenSSL. Only needed for examples.
+CMAKE_CONFIGURE_ARGS+=	-DENABLE_OPENSSL=OFF
 
 .include "../../devel/cmake/build.mk"
 .include "../../mk/bsd.pkg.mk"
