--- a/textproc/py-jinja2/Makefile
+++ b/textproc/py-jinja2/Makefile
@@ -1,6 +1,6 @@
-# $NetBSD: Makefile,v 1.38 2024/05/06 07:15:56 wiz Exp $
+# $NetBSD: Makefile,v 1.39 2024/12/25 21:58:16 adam Exp $
 
-DISTNAME=	jinja2-3.1.4
+DISTNAME=	jinja2-3.1.5
 PKGNAME=	${PYPKGPREFIX}-${DISTNAME}
 CATEGORIES=	textproc python
 MASTER_SITES=	${MASTER_SITE_PYPI:=J/Jinja2/}
@@ -13,10 +13,9 @@ LICENSE=	modified-bsd
 TOOL_DEPENDS+=	${PYPKGPREFIX}-flit_core-[0-9]*:../../devel/py-flit_core
 DEPENDS+=	${PYPKGPREFIX}-babel>=2.7:../../devel/py-babel
 DEPENDS+=	${PYPKGPREFIX}-markupsafe>=2.0:../../textproc/py-markupsafe
+TEST_DEPENDS+=	${PYPKGPREFIX}-trio-[0-9]*:../../devel/py-trio
 
 USE_LANGUAGES=	# none
-
-PYTHON_VERSIONS_INCOMPATIBLE=	27
 
 .include "../../lang/python/wheel.mk"
 .include "../../mk/bsd.pkg.mk"
