--- a/devel/pango/Makefile
+++ b/devel/pango/Makefile
@@ -1,6 +1,6 @@
-# $NetBSD: Makefile,v 1.266 2024/06/30 21:56:30 wiz Exp $
+# $NetBSD: Makefile,v 1.267 2024/12/26 05:54:35 pin Exp $
 
-DISTNAME=	pango-1.54.0
+DISTNAME=	pango-1.55.5
 CATEGORIES=	devel fonts
 MASTER_SITES=	${MASTER_SITE_GNOME:=sources/pango/${PKGVERSION_NOREV:R}/}
 EXTRACT_SUFX=	.tar.xz
@@ -23,7 +23,7 @@ SUBST_VARS.wrksrc=	WRKSRC
 
 .include "../../mk/bsd.prefs.mk"
 
-MESON_REQD+=		0.55.3
+MESON_REQD+=		1.2.0
 MESON_ARGS+=		-Dcairo=enabled
 MESON_ARGS+=		-Dfontconfig=enabled
 
@@ -69,9 +69,9 @@ BUILDLINK_API_DEPENDS.fribidi+=	fribidi>=1.0.6
 BUILDLINK_API_DEPENDS.glib2+=	glib2>=2.60
 .include "../../devel/glib2/buildlink3.mk"
 .include "../../devel/zlib/buildlink3.mk"
-BUILDLINK_API_DEPENDS.fontconfig+=	fontconfig>=2.11.91
+BUILDLINK_API_DEPENDS.fontconfig+=	fontconfig>=2.15.0
 .include "../../fonts/fontconfig/buildlink3.mk"
-BUILDLINK_API_DEPENDS.harfbuzz+= harfbuzz>=2.7.2
+BUILDLINK_API_DEPENDS.harfbuzz+= harfbuzz>=8.4.0
 .include "../../fonts/harfbuzz/buildlink3.mk"
 .if ${LIBRSVG_TYPE} == "rust"
 .include "../../graphics/graphite2/buildlink3.mk"
