salt salt-docs: updated to 3007.1
3007.1

REMOVED

The salt.utils.psutil_compat was deprecated and now removed in Salt 3008. Please use the psutil module directly.

FIXED

Fixes multiple issues with the cmd module on Windows. Scripts are called using the -File parameter to the powershell.exe binary. CLIXML data in stderr is now removed (only applies to encoded commands). Commands can now be sent to cmd.powershell as a list. Makes sure JSON data returned is valid. Strips whitespace from the return when using runas.

Fixed the win_lgpo_netsh salt util to handle non-English systems. This was a rewrite to use PowerShell instead of netsh to make the changes on the system

Fix typo in nftables module to ensure unique nft family values

Corrected x509_v2 CRL creation last_update and next_update values when system timezone is not UTC

Fix for NoneType can't be used in 'await' expression error.

Log "Publish server binding pub to" messages to debug instead of error level.

Fix syndic startup by making payload handler a coroutine

Fixed aptpkg.remove "unable to locate package" error for non-existent package

Fixed pillar.ls doesn't accept kwargs

Fix cache directory setting in Master Cluster tutorial

Change log level of successful master cluster key exchange from error to info.

Made file.managed skip download of a remote source if the managed file already exists with the correct hash

Fixed nftables.build_rule breaks ipv6 rules by using the wrong syntax for source and destination addresses

ADDED

Added the ability to pass a version of chocolatey to install to the chocolatey.bootstrap function. Also added states to bootstrap and unbootstrap chocolatey.

Add Ubuntu 24.04 support

Add Fedora 40 support, replacing Fedora 39

SECURITY

Bump to pydantic==2.6.4 due to https://github.com/advisories/GHSA-mr82-8j83-vxmv

Bump to jinja2==3.1.4 due to https://github.com/advisories/GHSA-h75v-3vvj-5mfj

--- a/sysutils/salt/Makefile.common
+++ b/sysutils/salt/Makefile.common
@@ -1,8 +1,8 @@
-# $NetBSD: Makefile.common,v 1.4 2024/03/06 19:11:53 adam Exp $
+# $NetBSD: Makefile.common,v 1.5 2024/12/26 22:16:45 adam Exp $
 # used by sysutils/salt/Makefile
 # used by sysutils/salt-docs/Makefile
 
-DISTNAME=	salt-3006.7
+DISTNAME=	salt-3007.1
 CATEGORIES=	sysutils python
 MASTER_SITES=	${MASTER_SITE_PYPI:=s/salt/}
 
@@ -13,4 +13,29 @@ LICENSE=	apache-2.0
 DISTINFO_FILE=	${.CURDIR}/../../sysutils/salt/distinfo
 PATCHDIR=	${.CURDIR}/../../sysutils/salt/patches
 
+DEPENDS+=	${PYPKGPREFIX}-OpenSSL>=24.0.0:../../security/py-OpenSSL
+DEPENDS+=	${PYPKGPREFIX}-cryptodome>=3.9.8:../../security/py-cryptodome
+DEPENDS+=	${PYPKGPREFIX}-cryptography>=42.0.0:../../security/py-cryptography
+DEPENDS+=	${PYPKGPREFIX}-aiohttp>=3.9.0:../../www/py-aiohttp
+DEPENDS+=	${PYPKGPREFIX}-cherrypy>=18.6.1:../../www/py-cherrypy
+DEPENDS+=	${PYPKGPREFIX}-dateutil>=2.8.1:../../time/py-dateutil
+DEPENDS+=	${PYPKGPREFIX}-distro>=1.0.1:../../devel/py-distro
+DEPENDS+=	${PYPKGPREFIX}-gnupg>=0.4.7:../../security/py-gnupg
+DEPENDS+=	${PYPKGPREFIX}-importlib-metadata>=3.3.0:../../devel/py-importlib-metadata
+DEPENDS+=	${PYPKGPREFIX}-jinja2-[0-9]*:../../textproc/py-jinja2
+DEPENDS+=	${PYPKGPREFIX}-jmespath-[0-9]*:../../textproc/py-jmespath
+DEPENDS+=	${PYPKGPREFIX}-looseversion-[0-9]*:../../devel/py-looseversion
+DEPENDS+=	${PYPKGPREFIX}-markupsafe-[0-9]*:../../textproc/py-markupsafe
+DEPENDS+=	${PYPKGPREFIX}-msgpack>=1.0.0:../../devel/py-msgpack
+DEPENDS+=	${PYPKGPREFIX}-packaging>=21.3:../../devel/py-packaging
+DEPENDS+=	${PYPKGPREFIX}-psutil>=5.0.0:../../sysutils/py-psutil
+DEPENDS+=	${PYPKGPREFIX}-requests>=2.25.0:../../devel/py-requests
+DEPENDS+=	${PYPKGPREFIX}-setproctitle>=1.2.3:../../sysutils/py-setproctitle
+DEPENDS+=	${PYPKGPREFIX}-timelib>=0.2.5:../../time/py-timelib
+DEPENDS+=	${PYPKGPREFIX}-tornado>=6.3.3:../../www/py-tornado
+DEPENDS+=	${PYPKGPREFIX}-yaml-[0-9]*:../../textproc/py-yaml
+DEPENDS+=	${PYPKGPREFIX}-zmq>=25.1.2:../../net/py-zmq
+
 USE_LANGUAGES=	# none
+
+PYTHON_VERSIONS_INCOMPATIBLE=	39 313
