--- a/sysutils/salt/Makefile
+++ b/sysutils/salt/Makefile
@@ -1,26 +1,11 @@
-# $NetBSD: Makefile,v 1.86 2024/11/13 11:34:22 jperkin Exp $
+# $NetBSD: Makefile,v 1.87 2024/12/26 22:16:45 adam Exp $
 
 .include "Makefile.common"
 
-PKGREVISION=	1
 COMMENT=	Remote execution and configuration management system
 
-DEPENDS+=	${PYPKGPREFIX}-cryptodome>=3.9.8:../../security/py-cryptodome
-DEPENDS+=	${PYPKGPREFIX}-distro>=1.0.1:../../devel/py-distro
-DEPENDS+=	${PYPKGPREFIX}-jinja2-[0-9]*:../../textproc/py-jinja2
-DEPENDS+=	${PYPKGPREFIX}-jmespath-[0-9]*:../../textproc/py-jmespath
-DEPENDS+=	${PYPKGPREFIX}-looseversion-[0-9]*:../../devel/py-looseversion
-DEPENDS+=	${PYPKGPREFIX}-markupsafe-[0-9]*:../../textproc/py-markupsafe
-DEPENDS+=	${PYPKGPREFIX}-msgpack>=0.5.6:../../devel/py-msgpack
-DEPENDS+=	${PYPKGPREFIX}-packaging>=21.3:../../devel/py-packaging
-DEPENDS+=	${PYPKGPREFIX}-psutil>=5.0.0:../../sysutils/py-psutil
-DEPENDS+=	${PYPKGPREFIX}-requests>=2.5.0:../../devel/py-requests
-DEPENDS+=	${PYPKGPREFIX}-yaml-[0-9]*:../../textproc/py-yaml
-DEPENDS+=	${PYPKGPREFIX}-zmq>=20.0.0:../../net/py-zmq
-
-USE_PKG_RESOURCES=	yes
-
-PYTHON_VERSIONS_ACCEPTED=	310
+TOOL_DEPENDS+=	${PYPKGPREFIX}-setuptools-[0-9]*:../../devel/py-setuptools
+TOOL_DEPENDS+=	${PYPKGPREFIX}-wheel-[0-9]*:../../devel/py-wheel
 
 BUILD_DEFS+=	VARBASE
 
@@ -80,5 +65,5 @@ post-install:
 	${INSTALL_DATA} ${WRKSRC}/conf/master ${DESTDIR}${EGDIR}/
 	${INSTALL_DATA} ${WRKSRC}/conf/minion ${DESTDIR}${EGDIR}/
 
-.include "../../lang/python/egg.mk"
+.include "../../lang/python/wheel.mk"
 .include "../../mk/bsd.pkg.mk"
