--- a/chat/weechat/Makefile
+++ b/chat/weechat/Makefile
@@ -1,6 +1,6 @@
-# $NetBSD: Makefile,v 1.154 2024/12/12 15:45:47 ryoon Exp $
+# $NetBSD: Makefile,v 1.155 2024/12/31 15:57:35 ryoon Exp $
 
-DISTNAME=	weechat-4.4.4
+DISTNAME=	weechat-4.5.1
 CATEGORIES=	chat
 MASTER_SITES=	https://www.weechat.org/files/src/
 EXTRACT_SUFX=	.tar.xz
@@ -14,12 +14,11 @@ LICENSE=	gnu-gpl-v3
 
 TOOL_DEPENDS+=	${RUBY_PKGPREFIX}-asciidoctor-[0-9]*:../../textproc/ruby-asciidoctor
 
-PYTHON_VERSIONS_INCOMPATIBLE=	27
 USE_TOOLS+=	msgfmt pkg-config
 USE_LANGUAGES=	c99
-USE_CMAKE=	yes
 FAKE_NCURSES=	yes
 
+#CMAKE_CONFIGURE_ARGS+=	-DCMAKE_BUILD_TYPE=Debug
 CMAKE_CONFIGURE_ARGS+=	-DASCIIDOCTOR_FOUND=ON
 CMAKE_CONFIGURE_ARGS+=	-DASCIIDOCTOR_EXECUTABLE=${PREFIX}/bin/asciidoctor${RUBY_VER}
 CMAKE_CONFIGURE_ARGS+=	-DENABLE_GUILE=OFF
@@ -64,5 +63,6 @@ pre-configure:
 .include "../../security/gnutls/buildlink3.mk"
 .include "../../security/libgcrypt/buildlink3.mk"
 .include "../../textproc/cJSON/buildlink3.mk"
+.include "../../devel/cmake/build.mk"
 .include "../../mk/curses.buildlink3.mk"
 .include "../../mk/bsd.pkg.mk"
