--- a/devel/java-subversion/Makefile
+++ b/devel/java-subversion/Makefile
@@ -1,7 +1,6 @@
-# $NetBSD: Makefile,v 1.75 2024/11/14 22:19:22 wiz Exp $
+# $NetBSD: Makefile,v 1.76 2024/12/31 17:33:16 adam Exp $
 
 PKGNAME=	java-subversion-${SVNVER}
-PKGREVISION=	3
 COMMENT=	Java bindings for Subversion
 
 MAKE_JOBS_SAFE=	no
