--- a/devel/ruby-subversion/Makefile
+++ b/devel/ruby-subversion/Makefile
@@ -1,7 +1,6 @@
-# $NetBSD: Makefile,v 1.97 2024/11/14 22:19:36 wiz Exp $
+# $NetBSD: Makefile,v 1.98 2024/12/31 17:33:16 adam Exp $
 
 PKGNAME=	${RUBY_PKGPREFIX}-subversion-${SVNVER}
-PKGREVISION=	3
 COMMENT=	Ruby bindings for Subversion
 
 .include "../../devel/subversion/Makefile.common"
