--- a/www/firefox115/Makefile
+++ b/www/firefox115/Makefile
@@ -1,12 +1,11 @@
-# $NetBSD: Makefile,v 1.39 2024/12/27 08:20:49 wiz Exp $
+# $NetBSD: Makefile,v 1.40 2025/01/07 17:17:34 bsiegert Exp $
 
 FIREFOX_VER=		${MOZ_BRANCH}${MOZ_BRANCH_MINOR}
-MOZ_BRANCH=		115.18
+MOZ_BRANCH=		115.19
 MOZ_BRANCH_MINOR=	.0esr
 
 DISTNAME=	firefox-${FIREFOX_VER}.source
 PKGNAME=	${DISTNAME:S/.source//:S/b/beta/:S/esr//:S/firefox-/firefox115-/}
-PKGREVISION=	1
 CATEGORIES=	www
 MASTER_SITES+=	${MASTER_SITE_MOZILLA:=firefox/releases/${FIREFOX_VER}/source/}
 MASTER_SITES+=	${MASTER_SITE_MOZILLA_ALL:=firefox/releases/${FIREFOX_VER}/source/}
