--- a/www/firefox128-l10n/Makefile
+++ b/www/firefox128-l10n/Makefile
@@ -1,6 +1,6 @@
-# $NetBSD: Makefile,v 1.5 2024/12/31 04:31:34 ryoon Exp $
+# $NetBSD: Makefile,v 1.6 2025/01/07 17:26:43 bsiegert Exp $
 
-FIREFOX_VER=	128.5.2esr
+FIREFOX_VER=	128.6.0esr
 PKGNAME=	firefox128-l10n-${FIREFOX_VER:S/b/beta/:S/esr//}
 DISTNAME=	# empty
 CATEGORIES=	www
