--- a/www/firefox128/Makefile
+++ b/www/firefox128/Makefile
@@ -1,8 +1,8 @@
-# $NetBSD: Makefile,v 1.13 2024/12/31 04:30:50 ryoon Exp $
+# $NetBSD: Makefile,v 1.14 2025/01/07 17:26:43 bsiegert Exp $
 
 FIREFOX_VER=		${MOZ_BRANCH}${MOZ_BRANCH_MINOR}
-MOZ_BRANCH=		128.5
-MOZ_BRANCH_MINOR=	.2esr
+MOZ_BRANCH=		128.6
+MOZ_BRANCH_MINOR=	.0esr
 
 DISTNAME=	firefox-${FIREFOX_VER}.source
 PKGNAME=	${DISTNAME:S/.source//:S/b/beta/:S/esr//:S/firefox-/firefox128-/}
