sysutils/git-annex: update to git-annex-10.20250115
git-annex (10.20250115) upstream; urgency=medium

  * Improve handing of ssh connection problems during
    remote annex.uuid discovery.
  * log: Support --key, as well as --branch and --unused.
  * Avoid verification error when addurl --verifiable is used
    with an url claimed by a special remote other than the web.
  * Fix installation on Android.
  * Allow enableremote of an existing webdav special remote that has
    read-only access.
  * git-remote-annex: Use enableremote rather than initremote.
  * Windows: Fix permission denied error when dropping files that
    have the readonly attribute set.
  * Added freezecontent-annex and thawcontent-annex hooks that
    correspond to the git configs annex.freezecontent and
    annex.thawcontent.
  * Added secure-erase-annex hook that corresponds to the git config
    annex.secure-erase-command.
  * Added commitmessage-annex hook that corresponds to the git config
    annex.commitmessage-command.
  * Added http-headers-annex hook that corresponds to the git config
    annex.http-headers-command.
  * Added git configs annex.post-update-command and annex.pre-commit-command
    that correspond to the post-update-annex and pre-commit-annex hooks.
  * Added annex.pre-init-command git config and pre-init-annex hook
    that is run before git-annex repository initialization.
  * Linux standalone builds' bundled rsync updated to fix security holes.

 -- Joey Hess <id@joeyh.name>  Wed, 15 Jan 2025 11:39:12 -0400

git-annex (10.20250102) upstream; urgency=medium

  * Added config `url.<base>.annexInsteadOf` corresponding to git's
    `url.<base>.pushInsteadOf`, to configure the urls to use for accessing
    the git-annex repositories on a server without needing to configure
    remote.name.annexUrl in each repository.
  * Work around git hash-object --stdin-paths's odd stripping of carriage
    return from the end of the line (some windows infection), avoiding
    crashing whe

--- a/sysutils/git-annex/patches/patch-git-annex.cabal
+++ b/sysutils/git-annex/patches/patch-git-annex.cabal
@@ -1,11 +1,39 @@
-$NetBSD: patch-git-annex.cabal,v 1.1 2023/11/02 03:15:01 pho Exp $
+$NetBSD: patch-git-annex.cabal,v 1.2 2025/02/02 04:31:03 pho Exp $
 
-No reason to restrict D-Bus support to Linux. It's a cross-platform thing,
-unlike SystemD.
+Hunk #0:
+    Remove -O or -j options. In pkgsrc we handle it via mk/haskell.mk. This
+    is pkgsrc-specific.
 
---- git-annex.cabal.orig	2023-11-02 01:33:00.571134681 +0000
+Hunk #1:
+    No reason to restrict D-Bus support to Linux. It's a cross-platform
+    thing unlike SystemD.
+
+    TODO: Upstream this hunk.
+
+--- git-annex.cabal.orig	2001-09-09 01:46:40.000000000 +0000
 +++ git-annex.cabal
-@@ -460,7 +460,6 @@ Executable git-annex
+@@ -290,20 +290,6 @@ Executable git-annex
+   -- Some things don't work with the non-threaded RTS.
+   GHC-Options: -threaded
+ 
+-  -- Fully optimize for production.
+-  if flag(Production)
+-    -- Lower memory systems can run out of memory with -O2, so
+-    -- optimise slightly less.
+-    if arch(arm)
+-      GHC-Options: -O2 -optlo-O2
+-    else
+-      GHC-Options: -O2
+-  else
+-    GHC-Options: -O0
+-
+-  if flag(ParallelBuild)
+-    GHC-Options: -j
+-
+   -- Avoid linking with unused dynamic libraries.
+   if os(linux) || os(freebsd)
+     GHC-Options: -optl-Wl,--as-needed
+@@ -487,7 +473,6 @@ Executable git-annex
              Other-Modules: Utility.DirWatcher.Kqueue
    
    if flag(Dbus)
