mitmproxy: updated to 11.1.2
06 February 2025: mitmproxy 11.1.2

CVE-2025-23217: mitmweb's API now requires an authentication token by default. The mitmweb API is bound to localhost only, but @gronke found that an attacker can circumvent that restriction by tunneling requests through the proxy server itself in an SSRF-style attack. (fa89055, @mhils)
Add (optional) password protection for mitmweb. The web_password option replaces the randomly-generated token authentication with a fixed secret that survives mitmproxy restarts. (0bd573a, @mhils)
mitmweb can now be hosted under arbitrary domains, the previously-used DNS rebind protection is not required anymore. (62693af, @mhils)
Security Hardening: mitmweb's xsrf_token cookie is now HttpOnly; SameSite=Strict.
We now provide standalone binaries for Linux arm64.
Standalone binaries are now compiled with Python 3.13.
Fix console freezing due to DNS queries with an empty question section.
Add mitmweb tutorial to docs.
Fixed a bug that caused mitmproxy to crash when loading prior knowledge h2 flows.
Fix a bug where mitmproxy would get stuck in secure web proxy mode when using ignore_hosts or allow_hosts.
Copy request/response data to the clipboard in mitmweb
Fix a bug where exporting a curl or httpie command with escaped characters would lead to different data being sent.
05 February 2025: mitmproxy 11.1.1

Yanked. Identical to 11.1.2, but failed to deploy in CI.

12 January 2025: mitmproxy 11.1.0

Local Capture Mode is now available on Linux as well.
mitmproxy now requires Python 3.12 or above.
Add cache-busting for mitmweb's front end code.
Clicking the URL in mitmweb now places the cursor at the current position instead of selecting the entire URL.
Add missing status codes
All filter expressions are now case-insensitive by default. Users can opt into case-sensitive filters by setting MITMPROXY_CASE_SENSITIVE_FILTERS=1 as an environment variable.
Remove filter expression lowercasing in block_list addon
Remove check for st

--- a/net/mitmproxy/Makefile
+++ b/net/mitmproxy/Makefile
@@ -1,6 +1,6 @@
-# $NetBSD: Makefile,v 1.50 2024/11/11 07:28:45 wiz Exp $
+# $NetBSD: Makefile,v 1.51 2025/02/06 13:22:10 adam Exp $
 
-DISTNAME=	mitmproxy-10.2.4
+DISTNAME=	mitmproxy-11.1.2
 CATEGORIES=	net
 MASTER_SITES=	https://downloads.mitmproxy.org/${PKGVERSION_NOREV}/
 
@@ -9,51 +9,38 @@ HOMEPAGE=	https://mitmproxy.org/
 COMMENT=	Interactive TLS-capable intercepting HTTP proxy
 LICENSE=	mit
 
-TOOL_DEPENDS+=	${PYPKGPREFIX}-setuptools>=0:../../devel/py-setuptools
-DEPENDS+=	${PYPKGPREFIX}-aioquic>=0.9.24:../../www/py-aioquic
+TOOL_DEPENDS+=	${PYPKGPREFIX}-setuptools>0:../../devel/py-setuptools
+DEPENDS+=	${PYPKGPREFIX}-aioquic>=1.1.0:../../www/py-aioquic
 DEPENDS+=	${PYPKGPREFIX}-asgiref>=3.2.10:../../www/py-asgiref
 DEPENDS+=	${PYPKGPREFIX}-brotli>=1.0:../../archivers/py-brotli
 DEPENDS+=	${PYPKGPREFIX}-certifi>=2019.9.11:../../security/py-certifi
-DEPENDS+=	${PYPKGPREFIX}-click>=7.0:../../devel/py-click
 DEPENDS+=	${PYPKGPREFIX}-cryptography>=42.0:../../security/py-cryptography
-DEPENDS+=	${PYPKGPREFIX}-flask>=1.1.1:../../www/py-flask
+DEPENDS+=	${PYPKGPREFIX}-flask>=3.0:../../www/py-flask
 DEPENDS+=	${PYPKGPREFIX}-h11>=0.11:../../www/py-h11
 DEPENDS+=	${PYPKGPREFIX}-h2>=4.1:../../www/py-h2
 DEPENDS+=	${PYPKGPREFIX}-hyperframe>=6.0:../../www/py-hyperframe
 DEPENDS+=	${PYPKGPREFIX}-kaitaistruct>=0.10:../../devel/py-kaitaistruct
 DEPENDS+=	${PYPKGPREFIX}-ldap3>=2.8:../../databases/py-ldap3
-DEPENDS+=	${PYPKGPREFIX}-mitmproxy_rs>=0.5.1:../../net/py-mitmproxy_rs
+DEPENDS+=	${PYPKGPREFIX}-mitmproxy_rs>=0.11.2:../../net/py-mitmproxy_rs
 DEPENDS+=	${PYPKGPREFIX}-msgpack>=1.0.0:../../devel/py-msgpack
 DEPENDS+=	${PYPKGPREFIX}-OpenSSL>=22.1:../../security/py-OpenSSL
 DEPENDS+=	${PYPKGPREFIX}-passlib>=1.6.5:../../security/py-passlib
-DEPENDS+=	${PYPKGPREFIX}-protobuf>=3.14:../../devel/py-protobuf
 DEPENDS+=	${PYPKGPREFIX}-publicsuffix2>=2.20190812:../../www/py-publicsuffix2
 DEPENDS+=	${PYPKGPREFIX}-pyparsing>=2.4.2:../../devel/py-pyparsing
-DEPENDS+=	${PYPKGPREFIX}-pyperclip>=1.6.0:../../x11/py-pyperclip
+DEPENDS+=	${PYPKGPREFIX}-pyperclip>=1.9.0:../../x11/py-pyperclip
 DEPENDS+=	${PYPKGPREFIX}-ruamel-yaml>=0.16:../../devel/py-ruamel-yaml
 DEPENDS+=	${PYPKGPREFIX}-sortedcontainers>=2.3:../../devel/py-sortedcontainers
 DEPENDS+=	${PYPKGPREFIX}-tornado>=6.2:../../www/py-tornado
-DEPENDS+=	${PYPKGPREFIX}-urwid>=2.1.1:../../devel/py-urwid
+DEPENDS+=	${PYPKGPREFIX}-urwid>=2.6.14:../../devel/py-urwid
 DEPENDS+=	${PYPKGPREFIX}-wsproto>=1.0:../../www/py-wsproto
-DEPENDS+=	${PYPKGPREFIX}-zstandard>=0.11:../../archivers/py-zstandard
+DEPENDS+=	${PYPKGPREFIX}-zstandard>=0.15:../../archivers/py-zstandard
+# urwid[trio]
+DEPENDS+=	${PYPKGPREFIX}-exceptiongroup>0:../../devel/py-exceptiongroup
+DEPENDS+=	${PYPKGPREFIX}-trio>=0.22.0:../../devel/py-trio
 
-# Only for Python >=3.10
-PYTHON_VERSIONS_INCOMPATIBLE=	39
+USE_LANGUAGES=	# none
 
-.include "../../lang/python/pyversion.mk"
-
-.if ${PYTHON_VERSION} < 311
-DEPENDS+=	${PYPKGPREFIX}-typing-extensions>=4.3:../../devel/py-typing-extensions
-.endif
-
-# Forked urwid-mitmproxy-2.1.2.1 contains patches for Windows. They should be
-# not needed in pkgsrc and this spare us some kludges and maintainance due
-# forked urwid.
-SUBST_CLASSES+=		urwid
-SUBST_STAGE.urwid=	pre-configure
-SUBST_MESSAGE.urwid=	Use non-forked urwid
-SUBST_FILES.urwid=	pyproject.toml
-SUBST_SED.urwid+=	-e 's/urwid-mitmproxy/urwid/g'
+PYTHON_VERSIONS_INCOMPATIBLE=	39 310 311
 
 SUBST_CLASSES+=				pyprojecttomlversions
 SUBST_STAGE.pyprojecttomlversions=	pre-configure
@@ -63,9 +50,6 @@ SUBST_SED.pyprojecttomlversions+=	-E -e '/[>=]=/ s/, *<[0-9.]+(",|;)/\1/g'
 
 REPLACE_SH+=	mitmproxy/contrib/kaitaistruct/make.sh
 
-USE_LANGUAGES=			# none
-
 .include "../../lang/python/batteries-included.mk"
-.include "../../lang/python/application.mk"
 .include "../../lang/python/wheel.mk"
 .include "../../mk/bsd.pkg.mk"
